[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu-theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=2]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.517647, 0.329412, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 284.0
margin_top = 40.0
margin_right = 764.0
margin_bottom = 183.0
theme = ExtResource( 1 )
text = "Pause Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue_Btn" type="Button" parent="."]
margin_left = 295.0
margin_top = 219.0
margin_right = 480.0
margin_bottom = 266.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart_Btn" type="Button" parent="."]
margin_left = 499.0
margin_top = 220.0
margin_right = 684.0
margin_bottom = 267.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_Btn" type="Button" parent="."]
margin_left = 296.0
margin_top = 287.0
margin_right = 481.0
margin_bottom = 334.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit_Btn" type="Button" parent="."]
margin_left = 499.0
margin_top = 288.0
margin_right = 684.0
margin_bottom = 335.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Continue_Btn" to="." method="_on_Continue_Btn_pressed"]
[connection signal="pressed" from="Restart_Btn" to="." method="_on_Restart_Btn_pressed"]
[connection signal="pressed" from="Menu_Btn" to="." method="_on_Menu_Btn_pressed"]
[connection signal="pressed" from="Quit_Btn" to="." method="_on_Quit_Btn_pressed"]
